# continuous-fusion

./: .gitignore  CMakeLists.txt  Makefile  package.xml  readme.md
src/: Makefile  bevprojector.cpp  bevprojector.hpp  bevprojectortests.cpp  calibpublisher.cpp  calibration.cpp  calibration.hpp  continuousfusion.cpp  continuousfusion.hpp  imagepublisher.cpp  imagepublisher.hpp  iotests.cpp  kittireader.cpp  kittireader.hpp  kittisynchronizer.cpp  main.cpp  main.hpp  makerosbag.cpp  makerosbag.hpp  velopublisher.cpp  velopublisher.hpp
tools/: compile_bev_projector.sh  run_calibrator_node.sh  run_camera_node.sh  run_fusion_node.sh  run_synchronizer_node.sh  run_velo_node.sh  run_world_frame_node.sh
