<?xml version="1.0"?>
<package format="2">
  <name>continuous_fusion</name>
  <version>0.0.0</version>
  <description>Implementation of continuous fusion</description>

  <maintainer email="email@is.hidden">jhultman</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/jhultman/continuous_fusion.git</url>
  <author>Jacob Hultman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <!--   <build_depend>message_generation</build_depend> -->

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!--   <exec_depend>message_runtime</exec_depend> -->
</package>
